Added Transfer to Someone Else functionalities

--- a/src/main/resources/templates/recipient.html
+++ b/src/main/resources/templates/recipient.html
@@ -40,7 +40,7 @@
                        name="${_csrf.parameterName}"
                        value="${_csrf.token}"/>
 
-                <button class="btn btn-primary" type="submit">Add/Edit Recipient</button>
+                <button class="btn btn-primary" type="submit">Save</button>
             </form>
 
             <div class="col-md-6">
